# kash-docs

./: .copier-answers.yml  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01kxe7g0yn0ccbph1t3y6r7ymr.md  is-01kxe7gw6syc1v38g3wc69agqn.md  is-01kxe7rdcv031j2p0qynj7cf0e.md  is-01kxe85f9ydsh7p55pn6hm65j2.md  is-01kxeh94m3ay9r8fr55kceg2g3.md  is-01kxeq7q299n09k4gy8raxnmz4.md  is-01kxeq7qd2bbersvfs9vgjcyta.md
.tbd/data-sync/mappings/: ids.yml
docs/: development.md  publishing.md
src/kash/kits/docs/: __init__.py
src/kash/kits/docs/actions/concepts/: add_list_of_concepts.py  find_near_duplicates.py
src/kash/kits/docs/actions/text/: add_description.py  add_summary_bullets.py  add_summary_key_claims.py  analyze_claims.py  analyze_full.py  analyze_key_claims.py  break_into_paragraphs.py  browser_fetch.py  caption_paras.py  chunk_paragraphs.py  create_docx.py  create_pdf.py  describe_briefly.py  docx_to_html.py  docx_to_md.py  download_links.py  endnotes_to_footnotes.py  extract_doc_links.py  extract_links.py  fetch_links.py  granular_claims.py  insert_section_headings.py  markdownify_doc.py  markdownify_doc_links.py  pdf_to_md.py  research_paras.py  summarize_paras.py  summarize_structurally.py
src/kash/kits/docs/analysis/: analysis_model.py  analysis_types.py  annotate_paras.py  chunk_docs.py  chunked_doc.py  claim_analysis.py  claim_extraction.py  claim_mapping.py  doc_annotations.py  doc_chunking.py  rigor_analysis.py  source_importing.py  support_analysis.py
src/kash/kits/docs/concepts/: concept_labels.py  concept_relations.py  doc_annotations.py  doc_link_content.py  para_annotations.py
src/kash/kits/docs/doc_formats/: convert_pdf_docling.py  convert_pdf_marker.py  doc_cleanups.py  docx_convert.py  markdown_footnotes.py  markitdown_convert.py  simple_html_to_docx.py
src/kash/kits/docs/doc_formats/templates/: docx_template.docx
src/kash/kits/docs/docs/: markdown_footnotes.py
src/kash/kits/docs/links/: download_urls_async.py  fetch_urls_async.py  links_model.py  links_preconditions.py  links_utils.py
src/kash/kits/docs/utils/: aws_utils.py  cache_requests_limited.py  multitask_gather.py  playwright_browser.py
src/kash/kits/docs/wiki/: wiki_commands.py  wiki_entity_linking.py  wiki_search.py
template_src/docx_template/: [Content_Types].xml
template_src/docx_template/_rels/: .rels
template_src/docx_template/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml  stylesWithEffects.xml
template_src/docx_template/word/_rels/: document.xml.rels
template_src/docx_template/word/theme/: theme1.xml
tests/: playwright_browser_test.py  test_optional_imports.py
tests/kash/kits/docs/analysis/: test_doc_annotations_footnotes.py
tests/kash/kits/docs/concepts/: test_doc_annotations_footnotes.py
